--- a/refs.bib
+++ b/refs.bib
@@ -860,3 +860,87 @@
   volume  = {66},
   pages   = {666-681}
 }
+
+@article{CaCh97,
+  title     = {Rouse dynamics of a dendrimer model in the $\vartheta$ condition},
+  author    = {Cai, Chengzhen and Chen, Zheng Yu},
+  journal   = {Macromolecules},
+  volume    = {30},
+  number    = {17},
+  pages     = {5104--5117},
+  year      = {1997},
+  publisher = {ACS Publications}
+}
+
+@article{ChCa99,
+  title     = {Dynamics of starburst dendrimers},
+  author    = {Chen, Zheng Yu and Cai, Chengzhen},
+  journal   = {Macromolecules},
+  volume    = {32},
+  number    = {16},
+  pages     = {5423--5434},
+  year      = {1999},
+  publisher = {ACS Publications}
+}
+
+@article{KlMo05,
+  title     = {Crossing numbers of Sierpi{\'n}ski-like graphs},
+  author    = {Klav{\v{z}}ar, Sandi and Mohar, Bojan},
+  journal   = {Journal of Graph Theory},
+  volume    = {50},
+  number    = {3},
+  pages     = {186--198},
+  year      = {2005},
+  publisher = {Wiley Online Library}
+}
+
+@article{GuHa91,
+  title     = {Embedding complete binary trees into butterfly networks},
+  author    = {Gupta, Ajay K. and Hambrusch, Susanne E.},
+  journal   = {IEEE Transactions on Computers},
+  volume    = {40},
+  number    = {7},
+  pages     = {853--863},
+  year      = {1991},
+  publisher = {IEEE}
+}
+
+@article{LiFaJi16,
+  title     = {{Complete binary trees embeddings in M{\"o}bius cubes}},
+  author    = {Liu, Zhao and Fan, Jianxi and Jia, Xiaohua},
+  journal   = {Journal of Computer and System Sciences},
+  volume    = {82},
+  number    = {2},
+  pages     = {260--281},
+  year      = {2016},
+  publisher = {Elsevier}
+}
+
+@article{JuWuZh13,
+  title     = {{Eigenvalues of normalized Laplacian matrices of fractal trees and dendrimers: Analytical results and applications}},
+  author    = {Julaiti, Alafate and Wu, Bin and Zhang, Zhongzhi},
+  journal   = {Journal of Chemical Physics},
+  volume    = {138},
+  number    = {20},
+  pages     = {204116},
+  year      = {2013},
+  publisher = {AIP Publishing}
+}
+
+@book{HiKlMiPeSt13,
+  title     = {The Tower of Hanoi-Myths and Maths},
+  author    = {Hinz, Andreas M and Klav{\v{z}}ar, Sandi and Milutinovi{\'c}, Uro{\v{s}} and Petr, Ciril and Stewart, Ian},
+  year      = {2013},
+  publisher = {Springer}
+}
+
+@article{QiZh18,
+  title     = {Spectral properties of extended Sierpi{\'n}ski graphs and their applications},
+  author    = {Qi, Yi and Zhang, Zhongzhi},
+  journal   = {IEEE Transactions on Network Science and Engineering},
+  volume    = {6},
+  number    = {3},
+  pages     = {512--522},
+  year      = {2019},
+  publisher = {IEEE}
+}
