add missing data of model networks

--- a/main.tex
+++ b/main.tex
@@ -1425,13 +1425,13 @@ We use our algorithm \(\text{Approx}\mathcal{HK}\) to compute the Kemeny constan
             Network                         & Vertices  & Edges     & \(K\)       & \(\tilde{K}\) & Error \(\rho\) & Time\cr
             \midrule
             \specialrule{0em}{3pt}{3pt}
-            \(\mathcal{F}_{12}\)            & 797,163   & 1,594,323 & 1,321,776   & 1,322,252     & 0.00036        & 143.6\cr
+            \(\mathcal{F}_{12}\)            & 797,163   & 1,594,323 & 1,321,776   & 1,322,243     & 0.00035        & 16.71\cr
             \specialrule{0em}{3pt}{3pt}
-            \(\mathcal{M}_{10}\)            & 2,097,153 & 3,145,728 & 22,020,096  & 22,015,912    & 0.00019        & 1582\cr
+            \(\mathcal{M}_{10}\)            & 2,097,153 & 3,145,728 & 22,020,096  & 22,015,912    & 0.00004        & 45.70\cr
             \specialrule{0em}{3pt}{3pt}
-            \(\mathcal{C}_{3,19}\)          & 1,572,862 & 1,572,861 & 52,953,206  & --            & --             & --\cr
+            \(\mathcal{C}_{3,19}\)          & 1,572,862 & 1,572,861 & 52,953,206  & 52,564,893    & 0.00733        & 31.48\cr
             \specialrule{0em}{3pt}{3pt}
-            \(\overline{\mathcal{H}}_{13}\) & 2,125,764 & 3,188,646 & 975,712,653 & --            & --             & --\cr
+            \(\overline{\mathcal{H}}_{13}\) & 2,125,764 & 3,188,646 & 975,712,653 & 970,030,470   & 0.00582        & 1028\cr
             \specialrule{0em}{3pt}{3pt}
             \bottomrule
         \end{tabular}
