add another physical explanation of AGC

--- a/headers.tex
+++ b/headers.tex
@@ -12,7 +12,7 @@
 \usepackage{stfloats}
 \usepackage[pdftex]{graphicx}
 \usepackage{subfigure}
-\usepackage{hyperref}
+\usepackage[colorlinks=true]{hyperref}
 \usepackage{array}
 \usepackage{epstopdf}
 \usepackage{balance}
@@ -74,6 +74,7 @@
 \newcommand{\vecy}{\bsym{y}}
 \newcommand{\vecz}{\bsym{y}}
 
+\newcommand{\vcal}{\mathcal{V}}
 \newcommand{\pscr}{\mathscr{P}}
 \newcommand{\cscr}{\mathscr{C}}
 \newcommand{\dsum}{d_{\sum}}
